--- a/Logisticregresson.ipynb
+++ b/Logisticregresson.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Logisticregresson.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOVljHLaPBjujVfHDGjY1Mm",
+      "authorship_tag": "ABX9TyNnV6mPk6BCvoh60b0jU/5n",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1059,6 +1059,7 @@
         "outputId": "e5d5af97-48a7-45cc-8114-9ed20d75a53a"
       },
       "source": [
+        "# Confusion Matrix\n",
         "from sklearn.metrics import confusion_matrix\n",
         "confusion_matrix(y_test,Y_Pred)"
       ],
@@ -1083,6 +1084,203 @@
       "cell_type": "code",
       "metadata": {
         "id": "1tyxjtp3Rt1r",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "73b3c554-9bef-478d-8e25-16a5fbc8d6c2"
+      },
+      "source": [
+        "# Accuracy\n",
+        "from sklearn.metrics import accuracy_score\n",
+        "accuracy_score(y_test, Y_Pred)"
+      ],
+      "execution_count": 53,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.7748888888888888"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 53
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "c5A1Kb4wSZxX",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "868d33e9-4d9c-4135-ef4e-ff1f7f81cb18"
+      },
+      "source": [
+        "# Recall\n",
+        "from sklearn.metrics import recall_score\n",
+        "recall =recall_score(y_test, Y_Pred, average=None)\n",
+        "recall"
+      ],
+      "execution_count": 60,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([0.92485549, 0.27596154])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 60
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "yhl8Cn72SkK9",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "d778cde7-f344-4664-d0f7-134ae313d372"
+      },
+      "source": [
+        "# Precision\n",
+        "from sklearn.metrics import precision_score\n",
+        "precision=precision_score(y_test, Y_Pred, average=None)\n",
+        "precision"
+      ],
+      "execution_count": 62,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([0.80951176, 0.52468007])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 62
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "xIfOM-guSzVK",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "4400aba6-a39b-411b-82df-fe5f7aa05888"
+      },
+      "source": [
+        "# Method 1: sklearn\n",
+        "from sklearn.metrics import f1_score\n",
+        "f1_score(y_test, Y_Pred, average=None)"
+      ],
+      "execution_count": 57,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([0.86334817, 0.36168872])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 57
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "rx838-_sTKEH",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "3dc5fa6b-4c25-4c7d-9cc2-ae157f233187"
+      },
+      "source": [
+        "# Method 2: Manual Calculation\n",
+        "F1 = 2 * (precision * recall) / (precision + recall)\n",
+        "F1"
+      ],
+      "execution_count": 65,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([0.86334817, 0.36168872])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 65
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "3zTY7T5NTQ0M",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 170
+        },
+        "outputId": "56b40898-ebb4-4c4e-8eaa-8e49977ecad0"
+      },
+      "source": [
+        "# Method 3: Classification report [BONUS]\n",
+        "from sklearn.metrics import classification_report\n",
+        "print(classification_report(y_test, Y_Pred))"
+      ],
+      "execution_count": 70,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "           0       0.81      0.92      0.86      3460\n",
+            "           1       0.52      0.28      0.36      1040\n",
+            "\n",
+            "    accuracy                           0.77      4500\n",
+            "   macro avg       0.67      0.60      0.61      4500\n",
+            "weighted avg       0.74      0.77      0.75      4500\n",
+            "\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "GsHQhSn7T6CA",
         "colab_type": "code",
         "colab": {}
       },
